--- a/index.html
+++ b/index.html
@@ -17,42 +17,56 @@
 </head>
 <body>
    <div class="container">
-
-  <img src="./images/mobile/image-hero@2x.jpg" alt="image" class="mobile-hero">
+      <section class="section">
+<img src="./images/mobile/image-hero@2x.jpg" alt="image" class="mobile-hero">
+  <img src="./images/tablet/image-hero@2x.jpg" alt="image" class="tablet-hero">
+   <div class="wrapper-hero"><p class="start-black"></p>
+  <img src="./images/desktop/image-hero@2x.jpg" alt="image" class="desktop-hero"/>
+</div>
+  <div class="main-wrapper">
 <div class="main-title"><h1">MODERN <br>ART GALLERY</h1></div>  
     <p class="main-text ">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
-   
-   <div class="btn-container">
+ <div class="btn-container">
   <a href="location.html">
    <button class="btn-enter">OUR LOCATION
  <div class="btn-add">
    <img src="./images/icon-arrow-right.svg" alt="icon" class="icon"/></div> </button></a>
-</div>
+</div></div>
+</section>
 
+<section class="section-2">
 <img src="./images/mobile/image-grid-1@2x.jpg" alt="image" class="mobile-grid"/>
+<img src="./images/tablet/image-grid-1@2x.jpg" alt="image" class="tablet-grid"/>
+  
+<img src="./images/desktop/image-grid-1@2x.jpg" alt="image" class="desktop-grid"/>
+<section class="second">
 <h2 class="second-title">YOUR DAY<br>AT THE GALLERY</h2>
-<p class="second-text">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
+<p class="second-text">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p></section></section>
+<section class="section-3">
  <img src="./images/mobile/image-grid-2@2x.jpg" alt="image"class="mobile-grid-2"/>
+ <img src="./images/tablet/image-grid-2@2x.jpg" alt="image"class="tablet-grid-2"/>
+ <img src="./images/desktop/image-grid-2@2x.jpg" alt="image"class="desktop-grid-2"/>
 
- <div class="mobile-grid-3">
- </div>
+ <div class="third">
+<div class="mobile-grid-3"></div>
+    <img src="./images/tablet/image-grid-3@2x.jpg" alt="image" class="tablet-grid-3"/>
+    <img src="./images/desktop/image-grid-3@2x.jpg" alt="image" class="desktop-grid-3"/>
+    
  <div class="black-box">
     <h1 class="black-box-title">COME & BE INSPIRED</h1>
-    <p class="black-box-text">We’re excited to welcome you to our gallery and see how our collections influence you.</p>
- </div>
+    <p class="black-box-text">We’re excited to welcome you to our gallery and see how our collections influence you.</p></div>
+ </div></section>
+
  <div class="black-footer">
-   <div class='light-text-logo'><img src="./images/logo-light.svg"alt="logo" /></div> 
+   <div class='light-text-logo'>
+      <img src="./images/logo-light.svg"alt="logo" /></div> 
     <p class="black-footer-text">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
     <div class="footer-logos">
        <img src="./images/icon-facebook.svg" alt="fc"class='fc'/>
        <img src="./images/icon-instagram.svg" alt="instagram" class='instagram'/>
        <img src="./images/icon-twitter.svg" alt='twitter' class="twitter"/>
-    </div>
+        </div>
  </div>
-
-
- </div>
-
-
+</div>
 </body>
 </html>
